# moji

./: .env.example  .gitignore  README.md  pyproject.toml  requirements.txt
moji/: __init__.py  cli.py  config.py  embedder.py  index.py  server.py  store.py  tagger.py
